--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .venv/
+Bank_AccountClass.py
+Bank_AccountProg.py
+calcgrosspay.py
+CellPhoneClass.py
+CellPhoneProgram.py
+Coin_Toss.py
+Coin_Class.py
+InsectClass.py
+InsectProgram.py
